manifests/test-app/webserver.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 3
  template:
    metadata:
      labels:
        app: nginx
    spec:
      volumes:
      - name: nginx-test-pvc
        persistentVolumeClaim:
          claimName: nginx-test-claim
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-test-pvc
          mountPath: /mnt
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
  - port: 80
    name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-deployment
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: "ragunan.nginx.com"
    http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-client
spec:
  selector:
    matchLabels:
      app: nginx-client
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx-client
    spec:
      containers:
      - name: nginx-client
        image: anaisareya/ubuntucurl
        command: ["/bin/sh", "-c"]
        args:
        - |
          while true; do
            curl -s -w "%{http_code} : $(date +'%H:%M:%S.%3N %Z')\n" -o /dev/null http://nginx.default.svc.cluster.local;
            sleep 1;
          done
